# modern-cmake-template

./: CMakeLists.txt
bar/: BarConfig.cmake  CMakeLists.txt
foo/: CMakeLists.txt
foo/cmake/: FooConfig.cmake  HelperMacroFunction.cmake
